fix: updated logo. better spacing and font.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
 #logo {
     max-height: 56px;
+    vertical-align: bottom;
 }
